tests/toylang/neg/001245_mutation.toylang
program a = { sleep a = a; } .
